no arrow class add

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #7f5f1e; }
+  background: #94b55c; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #d7294b; }
+  background: #5f746d; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #ede085; }
+  background: #1ef27e; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #1aa613; }
+  background: #c46e27; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #e25457; }
+  background: #a8d612; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #0b78c6; }
+  background: #94bfe2; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #609296; }
+  background: #3c9380; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #4fe08f; }
+  background: #3ec3a9; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #90fcac; }
+  background: #fdbc36; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #adda6e; }
+  background: #8e0440; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #3190cd; }
+  background: #da8de3; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #52cd85; }
+  background: #40c90d; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #c810fa; }
+  background: #543990; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #a4abfd; }
+  background: #759627; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #d7cdd6; }
+  background: #2e3284; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #667654; }
+  background: #7ac940; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #1256db; }
+  background: #249d9f; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #6570b7; }
+  background: #a038f7; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #14b575; }
+  background: #132fbc; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #3f0760; }
+  background: #4f24d2; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #622737; }
+  background: #e2a464; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #32dc7e; }
+  background: #5f24ab; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #893789; }
+  background: #a9fa38; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #eb18e4; }
+  background: #442b14; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #086958; }
+  background: #a02012; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #7437c0; }
+  background: #e8f26d; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #91385c; }
+  background: #ddf7d9; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #b3bd5a; }
+  background: #2d74d1; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #58ac0d; }
+  background: #ff2694; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #221f4e; }
+  background: #07f074; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #52e7ef; }
+  background: #864f32; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #341eca; }
+  background: #fff181; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #dfbaa7; }
+  background: #d74b9f; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #5f0ce5; }
+  background: #e42fcc; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #c7cc41; }
+  background: #71522e; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #b04e96; }
+  background: #17b8e6; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #5b44b3; }
+  background: #63701d; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #b322f0; }
+  background: #b75a3e; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #a9d0d5; }
+  background: #9be2f0; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #0cb917; }
+  background: #9b5de0; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #1fcb3f; }
+  background: #2d27ab; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #b6bef6; }
+  background: #978bcb; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #4c3ba6; }
+  background: #94a35b; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #c458e3; }
+  background: #ef52aa; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #e37690; }
+  background: #b6bd9a; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #d09219; }
+  background: #75da5d; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #84cf19; }
+  background: #09ef94; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #e9f934; }
+  background: #442941; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #73acdc; }
+  background: #152662; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #5536b4; }
+  background: #d0f05d; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #5577e7; }
+  background: #14ff6c; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #18c4ed; }
+  background: #bc997e; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #e4513b; }
+  background: #ed0ec1; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #2d1cd4; }
+  background: #34c8a6; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #0b7357; }
+  background: #281e42; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #aa8335; }
+  background: #3c5181; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #1ae17e; }
+  background: #b2d751; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #b6ed8f; }
+  background: #8b3f44; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #0a45ec; }
+  background: #a381e6; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #f30e26; }
+  background: #da8993; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #8753c4; }
+  background: #9d962c; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #1eb833; }
+  background: #751c97; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #b682d0; }
+  background: #d53efb; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #8d942d; }
+  background: #f16678; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #557d6d; }
+  background: #cb6115; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #924f1c; }
+  background: #a99441; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #9834cb; }
+  background: #2b95d0; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #58fa75; }
+  background: #7f80fe; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #9c2759; }
+  background: #2aaaae; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #4a03a5; }
+  background: #b39cbf; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #51ce43; }
+  background: #258aab; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #e96850; }
+  background: #6ee6c3; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #af2673; }
+  background: #f74259; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #6974af; }
+  background: #5a2809; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #674992; }
+  background: #c11608; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #e4f09b; }
+  background: #d7d5bf; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #2921a0; }
+  background: #665df9; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #599975; }
+  background: #af8008; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #c36020; }
+  background: #f2ed80; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #022762; }
+  background: #8c183c; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #903145; }
+  background: #52546f; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #57cc66; }
+  background: #9c30e0; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #f7a183; }
+  background: #2287eb; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #3f6c36; }
+  background: #1a48b0; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #4ff4b5; }
+  background: #24ecf9; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #7e99b1; }
+  background: #272a7d; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #4d141f; }
+  background: #f80809; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #c412d4; }
+  background: #9ead03; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #6d7cc8; }
+  background: #a2b53f; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #ad1ec5; }
+  background: #805be1; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #248738; }
+  background: #4c48bc; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #5c5a99; }
+  background: #2cb028; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #1aeda0; }
+  background: #84be4e; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #532950; }
+  background: #48171c; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #c2e0b7; }
+  background: #cfdcbf; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #3698e0; }
+  background: #a5de46; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #0aa79e; }
+  background: #05f41c; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #cbb9a1; }
+  background: #e6e21f; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #344eb6; }
+  background: #beba23; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #d4c473; }
+  background: #55ff31; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11717,7 +11717,7 @@ input:checked + .sliders:before {
         position: absolute;
         top: 35%;
         right: -8px; }
-    .process-button-wrapper ul li:last-child::before {
+    .process-button-wrapper ul .no-arrow::before {
       content: "";
       display: none; }
     .process-button-wrapper ul .active-btn {
