policy page all changes done

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #94b55c; }
+  background: #8cae60; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #5f746d; }
+  background: #1e4ec1; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #1ef27e; }
+  background: #0e4c6c; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #c46e27; }
+  background: #0b3d70; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #a8d612; }
+  background: #ea2bdc; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #94bfe2; }
+  background: #03c0b0; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #3c9380; }
+  background: #8d24d5; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #3ec3a9; }
+  background: #bf57bf; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #fdbc36; }
+  background: #860fe1; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #8e0440; }
+  background: #575e4f; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #da8de3; }
+  background: #6bfbb3; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #40c90d; }
+  background: #7eaf47; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #543990; }
+  background: #023b9f; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #759627; }
+  background: #7c82e1; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #2e3284; }
+  background: #a5cad9; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #7ac940; }
+  background: #bf6b8a; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #249d9f; }
+  background: #37a19a; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #a038f7; }
+  background: #82ae79; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #132fbc; }
+  background: #2b904c; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #4f24d2; }
+  background: #46702d; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #e2a464; }
+  background: #e3a081; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #5f24ab; }
+  background: #95d940; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #a9fa38; }
+  background: #8e44f3; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #442b14; }
+  background: #05518c; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #a02012; }
+  background: #275e9e; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #e8f26d; }
+  background: #0429f8; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #ddf7d9; }
+  background: #33531b; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #2d74d1; }
+  background: #e1ac1a; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #ff2694; }
+  background: #94f0c9; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #07f074; }
+  background: #17ce33; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #864f32; }
+  background: #0c22d1; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #fff181; }
+  background: #2d18d4; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #d74b9f; }
+  background: #829453; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #e42fcc; }
+  background: #0c57a6; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #71522e; }
+  background: #57b81b; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #17b8e6; }
+  background: #85e608; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #63701d; }
+  background: #3ac31b; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #b75a3e; }
+  background: #c3cc32; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #9be2f0; }
+  background: #4726c1; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #9b5de0; }
+  background: #82cfda; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #2d27ab; }
+  background: #9e3cb3; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #978bcb; }
+  background: #25b82a; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #94a35b; }
+  background: #f58b47; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #ef52aa; }
+  background: #4cc6e1; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #b6bd9a; }
+  background: #9c027f; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #75da5d; }
+  background: #6a2020; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #09ef94; }
+  background: #e16c3d; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #442941; }
+  background: #fc4195; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #152662; }
+  background: #c04d65; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #d0f05d; }
+  background: #52445a; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #14ff6c; }
+  background: #b79c17; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #bc997e; }
+  background: #290371; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #ed0ec1; }
+  background: #82e171; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #34c8a6; }
+  background: #165e10; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #281e42; }
+  background: #e4eb36; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #3c5181; }
+  background: #85dc3a; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #b2d751; }
+  background: #c2d359; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #8b3f44; }
+  background: #818fbb; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #a381e6; }
+  background: #7ad718; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #da8993; }
+  background: #af128a; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #9d962c; }
+  background: #cb4e02; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #751c97; }
+  background: #5a691f; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #d53efb; }
+  background: #e2b25d; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #f16678; }
+  background: #5456ad; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #cb6115; }
+  background: #ee5239; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #a99441; }
+  background: #c6a163; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #2b95d0; }
+  background: #b2597b; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #7f80fe; }
+  background: #289a8c; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #2aaaae; }
+  background: #0edfa2; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #b39cbf; }
+  background: #4a12ee; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #258aab; }
+  background: #99185c; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #6ee6c3; }
+  background: #807b26; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #f74259; }
+  background: #0e5fd4; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #5a2809; }
+  background: #efd68e; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #c11608; }
+  background: #e5fec5; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #d7d5bf; }
+  background: #eef5a4; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #665df9; }
+  background: #c3c891; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #af8008; }
+  background: #8ce874; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #f2ed80; }
+  background: #7cbd67; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #8c183c; }
+  background: #c0c5ac; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #52546f; }
+  background: #dc1b9b; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #9c30e0; }
+  background: #688ee6; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #2287eb; }
+  background: #706f59; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #1a48b0; }
+  background: #361bd3; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #24ecf9; }
+  background: #eac453; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #272a7d; }
+  background: #3f8596; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #f80809; }
+  background: #b954a2; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #9ead03; }
+  background: #df1d45; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #a2b53f; }
+  background: #9854d7; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #805be1; }
+  background: #d7623b; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #4c48bc; }
+  background: #50a402; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #2cb028; }
+  background: #cfa49e; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #84be4e; }
+  background: #de6562; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #48171c; }
+  background: #9566df; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #cfdcbf; }
+  background: #5237aa; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #a5de46; }
+  background: #725c0d; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #05f41c; }
+  background: #266786; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #e6e21f; }
+  background: #819f70; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #beba23; }
+  background: #4d628d; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #55ff31; }
+  background: #928eba; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11701,6 +11701,7 @@ input:checked + .sliders:before {
     display: flex; }
     .process-button-wrapper ul li span {
       background: #e0e0e1;
+      border: 1px solid #e0e0e1;
       margin: 0px 15px;
       padding: 15px 60px !important;
       border-radius: 8px;
@@ -11722,11 +11723,33 @@ input:checked + .sliders:before {
       display: none; }
     .process-button-wrapper ul .active-btn {
       background: #776fff;
+      border: 1px solid #776fff;
       padding: 20px 60px !important;
       color: #fff; }
       .process-button-wrapper ul .active-btn::before {
         content: "";
         border-left: 8px solid #776fff; }
+    .process-button-wrapper ul .sucess-active {
+      background: #fff;
+      border: 1px solid #776fff;
+      padding: 20px 60px !important;
+      color: #000;
+      position: relative; }
+      .process-button-wrapper ul .sucess-active::before {
+        right: -5px; }
+      .process-button-wrapper ul .sucess-active img {
+        position: absolute;
+        width: 25px;
+        right: 13px;
+        top: 27%; }
+
+.process-button-level-tow ul li span {
+  background: transparent;
+  border: 1px solid #776fff;
+  color: #000; }
+  .process-button-level-tow ul li span::before {
+    content: "";
+    border-left: 8px solid #776fff; }
 
 .policy-search .search-wrap-standard::before {
   display: none; }
@@ -11737,12 +11760,15 @@ input:checked + .sliders:before {
   border-radius: 5px; }
 
 .policy-accordions-wrapper .policy-accordions-box {
-  margin: 12px 14px !important; }
+  margin: 12px 0px !important; }
   .policy-accordions-wrapper .policy-accordions-box .collapse-heading-btn-row {
     font-size: 14px; }
 .policy-accordions-wrapper .p-selected {
   background: #f0f0f0;
   border: 1px solid #776fff; }
+
+.policy-btns-wrapper button {
+  margin-left: 15px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
@@ -11937,7 +11963,44 @@ input:checked + .sliders:before {
       .query-wizard-exp-contents .query-wizard-expension select.query-wizard-dropdown-large {
         width: 300px; }
       .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img {
-        width: 106px; } }
+        width: 106px; }
+
+  .policy-btns-wrapper button {
+    margin-left: 0px;
+    font-size: 14px !important; }
+
+  .process-button-wrapper {
+    margin: 15px 0px 6px; }
+    .process-button-wrapper ul {
+      flex-direction: column; }
+      .process-button-wrapper ul li {
+        height: auto; }
+        .process-button-wrapper ul li span {
+          margin: 6px 0px;
+          padding: 15px 60px !important;
+          display: block; }
+          .process-button-wrapper ul li span::before {
+            content: "";
+            width: 0;
+            height: 0;
+            border-left: 8px solid transparent;
+            border-right: 8px solid transparent;
+            border-top: 8px solid #e0e0e1;
+            position: absolute;
+            top: 45px;
+            left: 50%; }
+        .process-button-wrapper ul li .active-btn::before {
+          content: "";
+          border-left: 8px solid transparent;
+          border-right: 8px solid transparent;
+          border-top: 8px solid #776fff;
+          top: 56px;
+          left: 50%; }
+
+  .process-button-level-tow ul li span::before {
+    content: "";
+    border-top: 8px solid #776fff;
+    top: 47px; } }
 /*767 screen end here*/
 @media only screen and (min-width: 320px) and (max-width: 1023px) {
   .query-wizard-exp-contents {
