--- a/scss/_fahad-responsive.scss
+++ b/scss/_fahad-responsive.scss
@@ -62,7 +62,6 @@
         input:first-child {
             margin-right: 20px;
         }
-
     }
 
     .tree-list-div .device-tab-detail-box {
@@ -117,7 +116,6 @@
 
     .LoginPanel h3 {
         font-size: 16px;
-
     }
 
     .LoginPanel .fieldsSection .userName {
@@ -127,9 +125,7 @@
     .LoginPanel .fieldsBotSection label {
         padding: 16px 0px;
         padding-left: 25px;
-
     }
-
 
     .try-free-btn {
         padding: 12px !important;
@@ -259,10 +255,79 @@
             }
         }
     }
+
+    .policy-btns-wrapper {
+        button {
+            margin-left: 0px;
+            font-size: 14px !important;
+        }
+    }
+
+    .process-button-wrapper {
+        margin: 15px 0px 6px;
+
+        ul {
+            flex-direction: column;
+
+            li {
+                height: auto;
+
+                span {
+                    margin: 6px 0px;
+                    padding: 15px 60px !important;
+                    display: block;
+
+                    &::before {
+                        content: "";
+                        width: 0;
+                        height: 0;
+                        border-left: 8px solid transparent;
+                        border-right: 8px solid transparent;
+                        border-top: 8px solid #e0e0e1;
+                        position: absolute;
+                        top: 45px;
+                        left: 50%;
+                    }
+                }
+
+
+                .active-btn {
+
+                    &::before {
+                        content: "";
+                        border-left: 8px solid transparent;
+                        border-right: 8px solid transparent;
+                        border-top: 8px solid #776fff;
+                        top: 56px;
+                        left: 50%;
+                    }
+                }
+            }
+
+
+
+        }
+
+
+    }
+
+    .process-button-level-tow {
+        ul {
+            li {
+                span {
+
+                    &::before {
+                        content: "";
+                        border-top: 8px solid #776fff;
+                        top: 47px;
+                    }
+                }
+            }
+        }
+    }
 }
 
 /*767 screen end here*/
-
 
 @media only screen and (min-width: 320px) and (max-width: 1023px) {
     .query-wizard-exp-contents {
